--- a/conf/log_conf.yaml
+++ b/conf/log_conf.yaml
@@ -5,7 +5,7 @@ cblog:
   loopcheck: true # This temp method for development is busy wait. cf) cblogger.go:levelSetupLoop().
 
   ## debug | info | warn | error
-  loglevel: error # If loopcheck is true, You can set this online.
+  loglevel: debug # If loopcheck is true, You can set this online.
 
   ## true | false
   logfile: false 
