--- a/setup.env
+++ b/setup.env
@@ -1,2 +1,3 @@
+export CBSPIDER_ROOT=~/go/src/github.com/cloud-barista/cb-spider
 export CBSTORE_ROOT=~/go/src/github.com/cloud-barista/cb-spider
 export CBLOG_ROOT=~/go/src/github.com/cloud-barista/cb-spider
