--- a/conf/store_conf.yaml
+++ b/conf/store_conf.yaml
@@ -6,7 +6,7 @@ storetype: NUTSDB
 #storetype: ETCD
 
 nutsdb:
-  dbpath: "../../../cb-spider/meta_db/dat"
+  dbpath: "/root/go/src/github.com/cloud-barista/cb-spider/meta_db/dat"
   segmentsize: 1048576  # 1048576 1024*1024 (1MB)
   #segmentsize: 10485760  # 10485760 10*1024*1024 (10MB)
 
