--- a/api-runtime/rest-runtime/test/aws-shooter/setup.env
+++ b/api-runtime/rest-runtime/test/aws-shooter/setup.env
@@ -1,3 +1,5 @@
+RESTSERVER=localhost
+
 OHIO_IMG_ID1=ami-04fde1417a0168c95
 OREGON_IMG_ID1=ami-0347ed3d05fcc5b06
 SINGAPORE_IMG_ID1=ami-0e3de99412375e882
