--- a/api-runtime/rest-runtime/test/aws-shooter/setup.env
+++ b/api-runtime/rest-runtime/test/aws-shooter/setup.env
@@ -1,9 +1,31 @@
+
 RESTSERVER=localhost
 
-OHIO_IMG_ID1=ami-04fde1417a0168c95
+# for shooter
+CONNECT_NAMES[0]=aws-oregon-config
+CONNECT_NAMES[1]=aws-singapore-config
+CONNECT_NAMES[2]=aws-paris-config
+CONNECT_NAMES[3]=aws-saopaulo-config
+# for Test Service
+CONNECT_NAMES[4]=aws-tokyo-config
+
+# OREGON
+IMG_IDS[0]=ami-0347ed3d05fcc5b06
+# SINGAPORE
+IMG_IDS[1]=ami-0e3de99412375e882
+# PARIS
+IMG_IDS[2]=ami-0b87e681beef53cbd
+# SAOPAULO
+IMG_IDS[3]=ami-0e5a57eba6d24939a
+# TOKYO
+IMG_IDS[4]=ami-0bada0ca59894b083
+
+
+
 OREGON_IMG_ID1=ami-0347ed3d05fcc5b06
 SINGAPORE_IMG_ID1=ami-0e3de99412375e882
 PARIS_IMG_ID1=ami-0b87e681beef53cbd
 SAOPAULO_IMG_ID1=ami-0e5a57eba6d24939a
 
 TOKYO_IMG_ID1=ami-0bada0ca59894b083
+
