Update .gitignore and delete metadb datafile

--- a/.gitignore
+++ b/.gitignore
@@ -15,4 +15,5 @@
 
 cloud-driver-libs/*.so
 meta_db/dat/*
+api-runtime/rest-runtime/~/go/src/github.com/cloud-barista/cb-spider/meta_db/dat/*
 conf/store_conf.yaml
