gcp shooter release

--- a/api-runtime/rest-runtime/test/gcp-shooter/setup.env
+++ b/api-runtime/rest-runtime/test/gcp-shooter/setup.env
@@ -6,7 +6,7 @@ RESTSERVER=localhost
 
 
 LOCS=(`cat ../gcp-zones-regions-list.txt |grep "UP"  |awk '{print $1}'`)
-LOCS=(asia-east1-a)
+#LOCS=(asia-east1-a)
 
 num=0
 for ZONE in "${LOCS[@]}"
