JSON & KeyValue 처리 - KeyValue의 경우 String이 아닌 타입이 많기 때문에 Value 처리 방식을 정해서 수작업으로 추가해야함.

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ cloud-driver-libs/*.so
 meta_db/dat/*
 api-runtime/rest-runtime/~/go/src/github.com/cloud-barista/cb-spider/meta_db/dat/*
 conf/store_conf.yaml
+cloud-control-manager/cloud-driver/drivers/aws/main/log/cblogs.log
