--- a/setup.env
+++ b/setup.env
@@ -1,3 +1,3 @@
-export CBSPIDER_ROOT=~/go/src/github.com/cloud-barista/cb-spider
-export CBSTORE_ROOT=~/go/src/github.com/cloud-barista/cb-spider
-export CBLOG_ROOT=~/go/src/github.com/cloud-barista/cb-spider
+export CBSPIDER_ROOT=$GOPATH/src/github.com/cloud-barista/cb-spider
+export CBSTORE_ROOT=$GOPATH/src/github.com/cloud-barista/cb-spider
+export CBLOG_ROOT=$GOPATH/src/github.com/cloud-barista/cb-spider
