initial docker driver

--- a/cloud-info-manager/cloudos.yaml
+++ b/cloud-info-manager/cloudos.yaml
@@ -10,10 +10,11 @@
 ### List of support CloudOS.
 
 cloudos:
-  - aws
+  - AWS
   - GCP
   - AZURE
   - OPENSTACK
   - CLOUDIT
   - ALIBABA
+  - DOCKER
   - CLOUDTWIN
