--- a/api-runtime/rest-runtime/test/docker/setup.env
+++ b/api-runtime/rest-runtime/test/docker/setup.env
@@ -1,6 +1,7 @@
 RESTSERVER=localhost
 
-CONNECT_NAMES=("docker-config01" "docker-config02")
+#CONNECT_NAMES=("docker-config01" "docker-config02")
+CONNECT_NAMES=("docker-config01")
 
 IMG_IDS[0]=nginx:latest
 IMG_IDS[1]=nginx:latest
