Add spider cli and test scripts

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,6 @@ api-runtime/rest-runtime/$CBSTORE_ROOT/meta_db/dat/0.dat
 api-runtime/rest-runtime/log/cblogs.log
 /.idea/
 conf/config.yaml
+
+interface/cbadm
+interface/spider
