--- a/setup.env
+++ b/setup.env
@@ -1,4 +1,4 @@
 export CBSPIDER_ROOT=$GOPATH/src/github.com/cloud-barista/cb-spider
 export CBSTORE_ROOT=$GOPATH/src/github.com/cloud-barista/cb-spider
 export CBLOG_ROOT=$GOPATH/src/github.com/cloud-barista/cb-spider
-export PLUGIN_SW=ON
+export PLUGIN_SW=OFF
