--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -10,6 +10,12 @@ on:
     tags:
       - v*
 
+    # ignoring files and paths
+    paths-ignore:
+      - 'README.md'
+      - 'conf/**'
+      - 'cb-spider/cloud-control-manager/cloud-driver/drivers/mock/**'
+
   # Run tests for any PRs.
   pull_request:
 
