modified the setup.env file for Go 1.15.x

--- a/setup.env
+++ b/setup.env
@@ -1,4 +1,4 @@
-export CBSPIDER_ROOT=$GOPATH/src/github.com/cloud-barista/cb-spider
-export CBSTORE_ROOT=$GOPATH/src/github.com/cloud-barista/cb-spider
-export CBLOG_ROOT=$GOPATH/src/github.com/cloud-barista/cb-spider
+export CBSPIDER_ROOT=$HOME/go/src/github.com/cloud-barista/cb-spider
+export CBSTORE_ROOT=$CBSPIDER_ROOT
+export CBLOG_ROOT=$CBSPIDER_ROOT
 export PLUGIN_SW=OFF
