modified setup.env & added new develop.env for dev env.

--- a/setup.env
+++ b/setup.env
@@ -1,3 +1,4 @@
+#!/bin/bash
 export CBSPIDER_ROOT=$HOME/go/src/github.com/cloud-barista/cb-spider
 export CBSTORE_ROOT=$CBSPIDER_ROOT
 export CBLOG_ROOT=$CBSPIDER_ROOT
