--- a/conf/cloudos.yaml
+++ b/conf/cloudos.yaml
@@ -4,6 +4,7 @@
 #
 #      * Cloud-Barista: https://github.com/cloud-barista
 #
+# by CB-Spider Team, 2020.11.
 # by CB-Spider Team, 2020.03.
 
 
@@ -17,4 +18,7 @@ cloudos:
   - CLOUDIT
   - ALIBABA
   - DOCKER
+  - NCP
+
+  - MOCK
   - CLOUDTWIN
