add LOCALHOST Env for AddminWeb

--- a/setup.env
+++ b/setup.env
@@ -1,5 +1,24 @@
 #!/bin/bash
+
+# root path of cb-spider
 export CBSPIDER_ROOT=$HOME/go/src/github.com/cloud-barista/cb-spider
-export CBSTORE_ROOT=$CBSPIDER_ROOT
-export CBLOG_ROOT=$CBSPIDER_ROOT
+
+### Set Spider server IP to localhost.
+# If Spider server is running on a shared public IP Host,
+# Users cannot use some functions of AdminWeb.
+# In that case, you should set LOCALHOST with ON.
+# You can then access all AdminWeb functions through a browser.
+# But your browser should be on the same local host.
+# default: OFF
+export LOCALHOST=OFF
+
+### Set the library type of Cloud Driver pkg. 
+# ON is a shared library type.
+# default: OFF
 export PLUGIN_SW=OFF
+
+
+# root path of cb-store
+export CBSTORE_ROOT=$CBSPIDER_ROOT
+# root path of cb-log
+export CBLOG_ROOT=$CBSPIDER_ROOT
