add cdmeerkat path to develop.env

--- a/develop.env
+++ b/develop.env
@@ -8,6 +8,7 @@ alias cdspider='cd $CBSPIDER_ROOT'
 alias cdruntime='cd $CBSPIDER_ROOT/api-runtime'
 alias cdgrpc='cd $CBSPIDER_ROOT/api-runtime/grpc-runtime'
 alias cdrest='cd $CBSPIDER_ROOT/api-runtime/rest-runtime'
+alias cdmeerkat='cd $CBSPIDER_ROOT/api-runtime/meerkat-runtime'
 
 # cloud driver interface
 alias cddriverif='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/interfaces'
