--- a/setup.env
+++ b/setup.env
@@ -17,6 +17,11 @@ export LOCALHOST=OFF
 # default: OFF
 export PLUGIN_SW=OFF
 
+### set on/off of MeerKat Life
+# ON is making a life of MeerKat.
+# default: OFF
+export MEERKAT=OFF
+
 
 # root path of cb-store
 export CBSTORE_ROOT=$CBSPIDER_ROOT
