Add new Makefile, ./bin scripts and build tag dyna for dynamic plugin mode

--- a/api-runtime/Makefile
+++ b/api-runtime/Makefile
@@ -1,5 +1,7 @@
 default:
 	        go build -o cb-spider
+dyna plugin plug dynamic:
+	        go build -tags dyna -o cb-spider-dyna
 cc:
 	        GOOS=linux GOARCH=arm go build -o cb-spider-arm
 run:
