--- a/setup.env
+++ b/setup.env
@@ -14,7 +14,7 @@ export LOCALHOST=OFF
 
 ### Set the library type of Cloud Driver pkg. 
 # ON is a shared library type.
-# default: OFF
+# default: OFF (will be deprecated)
 export PLUGIN_SW=OFF
 
 ### set on/off of MeerKat Life
