Change log_file path with CBSPIDER_ROOT env var.

--- a/conf/log_conf.yaml
+++ b/conf/log_conf.yaml
@@ -13,7 +13,7 @@ cblog:
 
 ## Config for File Output ##
 logfileinfo:
-  filename: ./log/cblogs.log
+  filename: $CBSPIDER_ROOT/log/cblogs.log
   maxsize: 10 # megabytes
   maxbackups: 50
   maxage: 31 # days
