--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,9 @@
 
 *.log
 cloud-driver-libs/.ssh-gcp/*
+cloud-driver-libs/.ssh-aws/*
+cloud-driver-libs/.ssh-ali/*
+cloud-driver-libs/.ssh-tencent/*
 
 vendor/*
 cloud-driver-libs/*.so
@@ -36,3 +39,5 @@ interface/spider
 
 cloud-control-manager/cloud-driver/drivers/ncp/*
 cloud-control-manager/cloud-driver/drivers/ncp-plugin/*
+cloud-driver-libs/.ssh-aws/9df44b2eb36a1238fa6c4a40ee3cbe85--CB-KeyPairTest123123.pem
+cloud-driver-libs/.ssh-aws/9df44b2eb36a1238fa6c4a40ee3cbe85--CB-KeyPairTest123123.pub
