--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,7 @@
 *.log
 cloud-driver-libs/.ssh-gcp/*
 cloud-driver-libs/.ssh-aws/*
-cloud-driver-libs/.ssh-ali/*
+cloud-driver-libs/.ssh-aliyun/*
 cloud-driver-libs/.ssh-tencent/*
 
 vendor/*
@@ -39,5 +39,3 @@ interface/spider
 
 cloud-control-manager/cloud-driver/drivers/ncp/*
 cloud-control-manager/cloud-driver/drivers/ncp-plugin/*
-cloud-driver-libs/.ssh-aws/9df44b2eb36a1238fa6c4a40ee3cbe85--CB-KeyPairTest123123.pem
-cloud-driver-libs/.ssh-aws/9df44b2eb36a1238fa6c4a40ee3cbe85--CB-KeyPairTest123123.pub
