add some cdpath for develop env.

--- a/develop.env
+++ b/develop.env
@@ -1,17 +1,29 @@
 #!/bin/bash
 # for CB-Spider developers
 
+source setup.env
+
 # spider root
 alias cdspider='cd $CBSPIDER_ROOT'
+
+# bin
+alias cdbin='cd $CBSPIDER_ROOT/bin'
+
+# conf
+alias cdconf='cd $CBSPIDER_ROOT/conf'
+
+# log
+alias cdlog='cd $CBSPIDER_ROOT/log'
 
 # runtime
 alias cdruntime='cd $CBSPIDER_ROOT/api-runtime'
 alias cdgrpc='cd $CBSPIDER_ROOT/api-runtime/grpc-runtime'
 alias cdrest='cd $CBSPIDER_ROOT/api-runtime/rest-runtime'
+alias cdtest='cd $CBSPIDER_ROOT/api-runtime/rest-runtime/test'
 alias cdmeerkat='cd $CBSPIDER_ROOT/api-runtime/meerkat-runtime'
 
 # cloud driver interface
-alias cddriverif='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/interfaces'
+alias cddrvif='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/interfaces'
 
 # cloud drivers
 alias cdaws='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/drivers/aws'
