delete 'source setup.env' in develop.env

--- a/develop.env
+++ b/develop.env
@@ -1,9 +1,7 @@
 #!/bin/bash
 # for CB-Spider developers
 
-source setup.env
-
-# spider root
+# spider root path
 alias cdspider='cd $CBSPIDER_ROOT'
 
 # bin
