--- a/interface/cli-examples/setup.env
+++ b/interface/cli-examples/setup.env
@@ -12,5 +12,5 @@ KEYPAIR_NAME=${PREFIX}-keypair-01
 VM_NAME=${PREFIX}-vm-01
 
 
-# env for spiderctl
+# env for spctl
 CLIPATH=$CBSPIDER_ROOT/interface
