add some alias for development

--- a/develop.env
+++ b/develop.env
@@ -36,5 +36,13 @@ alias cdmock='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/drivers/mock'
 # AdminWeb
 alias cdadminweb='cd $CBSPIDER_ROOT/api-runtime/rest-runtime/admin-web'
 
+# interface
+alias cdif='cd $CBSPIDER_ROOT/interface'
+alias cdcliex='cd $CBSPIDER_ROOT/interface/cli-examples'
+alias cdapi='cd $CBSPIDER_ROOT/interface/api'
+
+# github
+alias gitmodadd="git add `git status | grep modified | awk '{print $2}'`"
+
 # terminal prompt
 export PS1="\[\e[36;1m\]\u@\[\e[32;1m\]\h:\[\e[31;1m\]\W# \[\e[0m\]"
