--- a/interface/cli-examples/gcp/setup.env
+++ b/interface/cli-examples/gcp/setup.env
@@ -1,3 +1,3 @@
-CONN_CONFIG=alibaba-tokyo-config
-IMAGE_NAME=ubuntu_18_04_x64_20G_alibase_20200220.vhd
-SPEC_NAME=ecs.t5-lc1m2.small
+CONN_CONFIG=gcp-ohio-config
+IMAGE_NAME=https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-1804-bionic-v20191024
+SPEC_NAME=f1-micro
