Update Tencent Frankfurt Zone info

--- a/cloud-control-manager/cloud-driver/drivers/tencent/main/Sample/conf/configTencent.yaml
+++ b/cloud-control-manager/cloud-driver/drivers/tencent/main/Sample/conf/configTencent.yaml
@@ -98,6 +98,7 @@ tencent:
   ### Europe (Frankfurt)
   #region: eu-frankfurt
   #zone: eu-frankfurt-1
+  #zone: eu-frankfurt-2
 
   ### Europe (Moscow)
   #region: eu-moscow
