--- a/setup.env
+++ b/setup.env
@@ -27,3 +27,7 @@ export MEERKAT=OFF
 export CBSTORE_ROOT=$CBSPIDER_ROOT
 # root path of cb-log
 export CBLOG_ROOT=$CBSPIDER_ROOT
+
+# if value is empty, REST Auth disabed.
+export API_USERNAME=
+export API_PASSWORD=
