Add the Service Address Configuration

--- a/setup.env
+++ b/setup.env
@@ -3,14 +3,15 @@
 # root path of cb-spider
 export CBSPIDER_ROOT=$HOME/go/src/github.com/cloud-barista/cb-spider
 
-### Set Spider server IP to localhost.
-# If Spider server is running on a shared public IP Host,
-# Users cannot use some functions of AdminWeb.
-# In that case, you should set LOCALHOST with ON.
-# You can then access all AdminWeb functions through a browser.
-# But your browser should be on the same local host.
-# default: OFF
-export LOCALHOST=OFF
+### Set Spider server Address of Service Address
+# cf) https://github.com/cloud-barista/cb-spider/wiki/CB-Spider-Service-Address-Configuration
+# default: unset SERVER_ADDRESS and unset SERVICE_ADDRESS
+# examples for other service port
+#export SERVER_ADDRESS=":3000"
+
+# examples for K8S env
+#export SERVER_ADDRESS=":1024"
+#export SERVICE_ADDRESS="1.2.3.4:31024"
 
 ### Set the library type of Cloud Driver pkg. 
 # ON is a shared library type.
