change 'CBSPIDER_ROOT' value dynamically(#458)

--- a/setup.env
+++ b/setup.env
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 # root path of cb-spider
-export CBSPIDER_ROOT=$HOME/go/src/github.com/cloud-barista/cb-spider
+export CBSPIDER_ROOT=$(dirname $(readlink -f "$0"))
 
 ### Set Spider server Address of Service Address
 # cf) https://github.com/cloud-barista/cb-spider/wiki/CB-Spider-Service-Address-Configuration
