use BASH_SOURCE to get cbspider root

--- a/setup.env
+++ b/setup.env
@@ -1,7 +1,8 @@
 #!/bin/bash
 
 # root path of cb-spider
-export CBSPIDER_ROOT=$(dirname $(readlink -f "$0"))
+SCRIPT_DIR=`dirname ${BASH_SOURCE[0]-$0}`
+export CBSPIDER_ROOT=`cd $SCRIPT_DIR && pwd`
 
 ### Set Spider server Address of Service Address
 # cf) https://github.com/cloud-barista/cb-spider/wiki/CB-Spider-Service-Address-Configuration
