텐센트 이슈 #488 처리 - 메모리 단위를 GB->MB로 변경

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ cloud-control-manager/cloud-driver/drivers/ncp/*
 cloud-control-manager/cloud-driver/drivers/ncp-plugin/*
 
 conf/testConfig*.yaml
+conf/testConfigTencent.yaml
