[CloudosMeta]cloudOS 메타데이터 반영

--- a/cloud-driver-libs/cloudos_meta.yaml
+++ b/cloud-driver-libs/cloudos_meta.yaml
@@ -30,9 +30,9 @@ TENCENT:
   region: Region Zone
   credential: ClientId ClientSecret
 
-IBM: # @todo update
+IBM:
   region: Region Zone
-  credential: ClientId ClientSecret
+  credential: ApiKey
 
 #------
 
