--- a/cloud-control-manager/cloud-driver/drivers/ibmcloud-vpc/main/conf/config.yaml.sample
+++ b/cloud-control-manager/cloud-driver/drivers/ibmcloud-vpc/main/conf/config.yaml.sample
@@ -1,7 +1,7 @@
 ## Config for Ibm ##
 # Test : create => get
 ibmvpc:
-  apiKey: TBD
+  apiKey: XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
   region: us-south
   zone: us-south-1
   resources:
