Alibaba - RootDisk 설정 기능 추가

--- a/cloud-driver-libs/cloudos_meta.yaml
+++ b/cloud-driver-libs/cloudos_meta.yaml
@@ -25,6 +25,8 @@ OPENSTACK:
 ALIBABA:
   region: Region Zone
   credential: ClientId ClientSecret
+  rookdisktype: cloud/cloud_efficiency/cloud_ssd/cloud_essd
+
 
 TENCENT:
   region: Region Zone
