--- a/cloud-driver-libs/cloudos_meta.yaml
+++ b/cloud-driver-libs/cloudos_meta.yaml
@@ -31,6 +31,7 @@ ALIBABA:
 TENCENT:
   region: Region Zone
   credential: ClientId ClientSecret
+  rookdisktype: LOCAL_BASIC/LOCAL_SSD/CLOUD_BASIC/CLOUD_SSD/CLOUD_PREMIUM
 
 IBM:
   region: Region Zone
