GCP - RootDisk 설정 기능 추가 사용 가능 디스크 타입 : pd-standard/pd-balanced/pd-ssd/pd-extreme GCP는 디스크 타입 지정 없이 사이즈만 지정도 가능 asia-northeast3-a 존에서 f1-micro 스펙으로 테스트했음.
RootDiskSize: "12",     //최소 10GB 이상이어야 함.

RootDiskType: "pd-ssd",
RootDiskSize: "12",     //최소 10GB 이상이어야 함.

RootDiskType: "pd-balanced",
RootDiskSize: "Default", //10GB

--- a/cloud-driver-libs/cloudos_meta.yaml
+++ b/cloud-driver-libs/cloudos_meta.yaml
@@ -13,7 +13,8 @@ AWS:
 GCP:
   region: Region Zone
   credential: PrivateKey ProjectID ClientEmail
-
+  rookdisktype: pd-standard/pd-balanced/pd-ssd/pd-extreme
+  
 AZURE:
   region: location ResourceGroup
   credential: ClientId ClientSecret TenantId SubscriptionId
