Apply interface changes of VMSpecHandler.

--- a/develop.env
+++ b/develop.env
@@ -32,6 +32,8 @@ alias cdopenstack='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/drivers/
 alias cdcloudit='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/drivers/cloudit'
 alias cddocker='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/drivers/docker'
 alias cdmock='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/drivers/mock'
+alias cdtencent='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/drivers/tencent'
+alias cdibm='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/drivers/ibmcloud-vpc'
 
 # AdminWeb
 alias cdadminweb='cd $CBSPIDER_ROOT/api-runtime/rest-runtime/admin-web'
