Add KTCloud conn. config, Update CloudOS_Meta

--- a/cloud-driver-libs/cloudos_meta.yaml
+++ b/cloud-driver-libs/cloudos_meta.yaml
@@ -46,7 +46,7 @@ NCP:
   region: Region / Zone
   credential: ClientId / ClientSecret
 
-KT:
+KTCLOUD:
   region: Region / Zone
   credential: ClientId / ClientSecret
 
