--- a/cloud-driver-libs/cloudos_meta.yaml
+++ b/cloud-driver-libs/cloudos_meta.yaml
@@ -9,6 +9,7 @@
 AWS:
   region: Region / Zone
   credential: ClientId / ClientSecret
+  rootdisktype: standard / io1 / io2 / gp2 / sc1 / st1 / gp3
 
 AZURE:
   region: location / ResourceGroup
@@ -17,17 +18,17 @@ AZURE:
 GCP:
   region: Region / Zone
   credential: PrivateKey / ProjectID / ClientEmail
-  rookdisktype: pd-standard / pd-balanced / pd-ssd / pd-extreme
+  rootdisktype: pd-standard / pd-balanced / pd-ssd / pd-extreme
 
 ALIBABA:
   region: Region / Zone
   credential: ClientId / ClientSecret
-  rookdisktype: cloud_efficiency / cloud / cloud_ssd / cloud_essd
+  rootdisktype: cloud_efficiency / cloud / cloud_ssd / cloud_essd
 
 TENCENT:
   region: Region / Zone
   credential: ClientId / ClientSecret
-  rookdisktype: CLOUD_PREMIUM / LOCAL_BASIC / LOCAL_SSD / CLOUD_BASIC / CLOUD_SSD
+  rootdisktype: CLOUD_PREMIUM / LOCAL_BASIC / LOCAL_SSD / CLOUD_BASIC / CLOUD_SSD
 
 IBM:
   region: Region / Zone
@@ -65,3 +66,5 @@ MOCK:
 CLOUDTWIN:
   region: Region
   credential: IdentityEndpoint / DomainName / MockName
+
+
