[Azure] RootDisk Type 타입지정(이슈 #348)
- Azure RootDisk Size (현재 미제공)
   - vm 생성 시 지정하는 방식이 아닌 생성 후 디스크의 변경을 이용한 기능 제공
   - disksize 변경 시 발생하는 에러 사항 고려 후 제공
- Azure RootDisk Type(제공)
   - DiskType : Premium_LRS / Standard_LRS / StandardSSD_LRS / UltraSSD_LRS 중  UltraSSD_LRS 를 제외한 3가지 Type 제공
   - UltraSSD_LRS 제외 이유 : 제공 지역 및 iops에 대한 제한
   - Type의 가독성을 위하여  아래 타입의 문자열로 제공
      - Premium_LRS = PremiumSSD
      - StandardSSD_LRS  = StandardSSD
      -  Standard_LRS = StandardHHD

--- a/cloud-driver-libs/cloudos_meta.yaml
+++ b/cloud-driver-libs/cloudos_meta.yaml
@@ -15,6 +15,7 @@ AWS:
 AZURE:
   region: location / ResourceGroup
   credential: ClientId / ClientSecret / TenantId / SubscriptionId
+  rootdisktype: PremiumSSD / StandardSSD / StandardHHD
 
 GCP:
   region: Region / Zone
