add PATH for the spctl in ./interface

--- a/develop.env
+++ b/develop.env
@@ -43,5 +43,8 @@ alias cdif='cd $CBSPIDER_ROOT/interface'
 alias cdcliex='cd $CBSPIDER_ROOT/interface/cli-examples'
 alias cdapi='cd $CBSPIDER_ROOT/interface/api'
 
+# 
+PATH="$CBSPIDER_ROOT/interface:$PATH"
+
 # terminal prompt
 export PS1="\[\e[36;1m\]\u@\[\e[32;1m\]\h:\[\e[31;1m\]\W# \[\e[0m\]"
