--- a/cloud-driver-libs/cloudos.yaml
+++ b/cloud-driver-libs/cloudos.yaml
@@ -22,8 +22,11 @@ cloudos:
   - CLOUDIT
   - NCP
   - KTCLOUD
-#---
+#--- PoC
   - DOCKER
-#---
+#--- Emulation
   - MOCK
   - CLOUDTWIN
+#--- Experimental
+  - MINI
+
