--- a/develop.env
+++ b/develop.env
@@ -34,6 +34,7 @@ alias cddocker='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/drivers/doc
 alias cdmock='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/drivers/mock'
 alias cdtencent='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/drivers/tencent'
 alias cdibm='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/drivers/ibmcloud-vpc'
+alias cdmini='cd $CBSPIDER_ROOT/cloud-control-manager/cloud-driver/drivers/mini'
 
 # AdminWeb
 alias cdadminweb='cd $CBSPIDER_ROOT/api-runtime/rest-runtime/admin-web'
