--- a/setup.env
+++ b/setup.env
@@ -19,10 +19,12 @@ export CBSPIDER_ROOT=`cd $SCRIPT_DIR && pwd`
 # default: OFF (will be deprecated)
 export PLUGIN_SW=OFF
 
-### set on/off of MeerKat Life
-# ON is making a life of MeerKat.
+### set on/off of MINI Life
+# ON is making a life of MINI.
 # default: OFF
-export MEERKAT=OFF
+export EXPERIMENTAL_MINI=OFF
+export EXPERIMENTAL_MINI_MANAGER=OFF
+export EXPERIMENTAL_MINI_USER=OFF
 
 
 # root path of cb-store
