--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ cloud-control-manager/cloud-driver/drivers/tencent/main/conf/testConfigTencent.y
 
 utils/clone-mc-meta-info/vm-image/data/*
 utils/clone-mc-meta-info/vm-image/test/*
+utils/clone-mc-meta-info/vm-image/az-data/*
