Add scripts for mini-cache test

--- a/setup.env
+++ b/setup.env
@@ -22,14 +22,14 @@ export PLUGIN_SW=OFF
 ########################### set on/off of Spider-Mini Life
 # ON is making a life of MINI.
 # default: OFF
-export EXPERIMENTAL_MINI=ON
+export EXPERIMENTAL_MINI=OFF
 export EXPERIMENTAL_MINI_MANAGER=OFF
 export EXPERIMENTAL_MINI_USER=OFF
 
 # unit: sec, default: 36000(10H), if including Azure, >3600(60M).
-# 3600: 1H, 7200: 2H, 18000: 5H, 36000: 10H
+# 1800: 30M, 3600: 1H, 7200: 2H, 18000: 5H, 36000: 10H
 #export EXPERIMENTAL_MINI_CLONE_INTERVAL=36000
-export EXPERIMENTAL_MINI_CLONE_INTERVAL=18000
+export EXPERIMENTAL_MINI_CLONE_INTERVAL=1800
 
 # the number of Cloning Go Routine, default: 10
 export EXPERIMENTAL_MINI_MAX_CLONER=10
