--- a/cloud-driver-libs/cloudos_meta.yaml
+++ b/cloud-driver-libs/cloudos_meta.yaml
@@ -11,42 +11,60 @@ AWS:
   credential: ClientId / ClientSecret
   # rootdisktype: standard / io1 / io2 / gp2 / sc1 / st1 / gp3
   rootdisktype: standard / gp2 / gp3
+  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM
+  idmaxlength: 255 / 256 / 255 / 255 / 255
 
 AZURE:
   region: location / ResourceGroup
   credential: ClientId / ClientSecret / TenantId / SubscriptionId
   rootdisktype: PremiumSSD / StandardSSD / StandardHHD
+  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM
+  idmaxlength: 64 / 80 / 64 / 80 / 64
 
 GCP:
   region: Region / Zone
   credential: PrivateKey / ProjectID / ClientEmail
   rootdisktype: pd-standard / pd-balanced / pd-ssd / pd-extreme
+  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM
+  idmaxlength: 63 / 63 / 63 / 0 / 63
 
 ALIBABA:
   region: Region / Zone
   credential: ClientId / ClientSecret
   rootdisktype: cloud_efficiency / cloud / cloud_ssd / cloud_essd
+  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM
+  idmaxlength: 128 / 128 / 128 / 128 / 128 
 
 TENCENT:
   region: Region / Zone
   credential: ClientId / ClientSecret
   rootdisktype: CLOUD_PREMIUM / LOCAL_BASIC / LOCAL_SSD / CLOUD_BASIC / CLOUD_SSD
+  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM
+  idmaxlength: 60 / 60 / 60 / 25 / 88
 
 IBM:
   region: Region / Zone
   credential: ApiKey
+  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM
+  idmaxlength: 63 / 63 / 63 / 63 / 63
 
 OPENSTACK:
   region: Region
   credential: IdentityEndpoint / Username / Password / DomainName / ProjectID
+  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM
+  idmaxlength: 255 / 255 / 255 / 255 / 255
 
 CLOUDIT:
   region: Region
   credential: IdentityEndpoint / AuthToken / Username / Password / TenantId
+  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM
+  idmaxlength: 0 / 45 / 45 / 0 / 45
 
 NCP: 
   region: Region / Zone
   credential: ClientId / ClientSecret
+  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM
+  idmaxlength: 0 / 0 / 0 / 30 / 30 
   
 NCPVPC: 
   region: Region / Zone
@@ -59,6 +77,8 @@ KTCLOUD:
 NHNCLOUD:
   region: Region
   credential: IdentityEndpoint / Username / Password / DomainName / TenantId
+  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM
+  idmaxlength: 0 / 0 / 255 / 255 / 255 
 
 #--- PoC
 
