[VM-Handler] Vmhandler refactory 및 rootSize
- RootDisk Size 변경 기능 추가 및 Vmhandler 개선
  - RootDisk Size의 실패 연관 리소스 반납 로직 추가
  - Error 케이스 분할 및 safe 로직 추가

- Test_Resources 통일 
  - VM 과 타 핸들러의 Test_Resources 파일 통합
  - Test_Resources를 위한 config.yaml 샘플  config.yaml.sample

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,5 @@ cloud-control-manager/cloud-driver/drivers/tencent/main/conf/testConfigTencent.y
 utils/clone-mc-meta-info/vm-image/data/*
 utils/clone-mc-meta-info/vm-image/test/*
 utils/clone-mc-meta-info/vm-image/az-data/*
+
+cloud-control-manager/cloud-driver/drivers/azure/main/conf/config.yaml
