--- a/cloud-driver-libs/cloudos_meta.yaml
+++ b/cloud-driver-libs/cloudos_meta.yaml
@@ -41,6 +41,7 @@ TENCENT:
   region: Region / Zone
   credential: ClientId / ClientSecret
   rootdisktype: CLOUD_PREMIUM / LOCAL_BASIC / LOCAL_SSD / CLOUD_BASIC / CLOUD_SSD
+  rootdisksize: 50-16000 / 100-16000
   # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM
   idmaxlength: 60 / 60 / 60 / 25 / 88
 
