--- a/cloud-driver-libs/cloudos_meta.yaml
+++ b/cloud-driver-libs/cloudos_meta.yaml
@@ -34,6 +34,7 @@ ALIBABA:
   region: Region / Zone
   credential: ClientId / ClientSecret
   rootdisktype: cloud_efficiency / cloud / cloud_ssd / cloud_essd
+  rootdisksize: cloud_efficiency|20|32768|GB / cloud|5|2000|GB / cloud_ssd|20|32768|GB / cloud_essd|20|32768|GB
   # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM
   idmaxlength: 128 / 128 / 128 / 128 / 128 
 
