--- a/cloud-control-manager/cloud-driver/drivers/alibaba/main/Sample/config/config.yaml
+++ b/cloud-control-manager/cloud-driver/drivers/alibaba/main/Sample/config/config.yaml
@@ -1,8 +1,8 @@
 ali:
 
   # Ali Credential Info
-  ali_access_key_id: LTAI5tHvHTzTFLro5R7NAvdF
-  ali_secret_access_key: fiOoxeORApWfLWTsTBqcPM7UlylKkF
+  ali_access_key_id: LTAI5xxxxxxxxxxxx
+  ali_secret_access_key: fiOoxxxxxxxxxxxxxx
   region: ap-northeast-1
 
   # AMI
