[Cloudit] VPC 개선 cb-store 저장 및 활용
-  Cloudit - VPC cb-store 저장 및 활용방법 적용
   - VPC 단일 생성 기능 제공
   - VPC 내 서브넷 관리를 위한 cb-store 데이터 & CSP 데이터 조합 
     - 서브넷관리를 위해 cb-store에 데이터 저장 
     - 콘솔 등의 환경에서 subnet 삭제등으로  cb-store와 실데이터 싱크를 위해 실제 subnet 존재 확인등의 로직 추가

--- a/cloud-control-manager/cloud-driver/drivers/cloudit/main/conf/config.yaml.sample
+++ b/cloud-control-manager/cloud-driver/drivers/cloudit/main/conf/config.yaml.sample
@@ -61,3 +61,6 @@ cloudit:
         SubnetIID:
           nameId: mcb-test-vpc-subnet3
         IPv4_CIDR: 10.0.16.0/22
+      RemoveSubnet:
+        SubnetIID:
+          nameId: mcb-test-vpc-subnet0
