--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@ utils/clone-mc-meta-info/vm-image/az-data/*
 cloud-control-manager/cloud-driver/drivers/azure/main/conf/config.yaml
 
 cloud-control-manager/cloud-driver/drivers/cloudit/main/conf/config.yaml
+cloud-control-manager/cloud-driver/drivers/ibmcloud-vpc/main/conf/config.yaml
+
