spctl test: Add new CSP test cases and update region, image id, ...

--- a/interface/cli-examples/setup.env
+++ b/interface/cli-examples/setup.env
@@ -1,5 +1,6 @@
-
 PREFIX=powerkim
+PREFIX=powerkim-abcdefghijklmnopqrstuvwxyz-abcdefghijklmnopqrstuvwxyz-abcdefghijklmnopqrstuvwxyz-abcdefghijklmnopqrstuvwxyz-abcdefghijklmnopqrstuvwxyz-abcdefghijklmnopqrstuvwxyz-abcdefghijklmnopqrstuvwxyz-abcdefghijklmnopqrstuvwxyz-abcdefghijklmnopqrstuvwxyz-abcdefghijklmnopqrstuvwxyz
+
 
 VPC_NAME=${PREFIX}-vpc-01
 VPC_CIDR=192.168.0.0/16
