--- a/cloud-control-manager/cloud-driver/drivers/cloudit/main/conf/config.yaml.sample
+++ b/cloud-control-manager/cloud-driver/drivers/cloudit/main/conf/config.yaml.sample
@@ -43,6 +43,18 @@ cloudit:
           IPProtocol: "tcp"
           CIDR: "0.0.0.0/0"
           Direction: "inbound"
+      addRules:
+        - FromPort: "66"
+          ToPort: "88"
+          IPProtocol: "tcp"
+          CIDR: "0.0.0.0/0"
+          Direction: "inbound"
+      removeRules:
+        - FromPort: "66"
+          ToPort: "88"
+          IPProtocol: "tcp"
+          CIDR: "0.0.0.0/0"
+          Direction: "inbound"
     KeyPairIID:
       nameId: CB-Keypair
       systemId: CB-Keypair
