Change the alias 'cdtest' path to /tmp/mini/cb-spider/test/

--- a/develop.env
+++ b/develop.env
@@ -17,7 +17,8 @@ alias cdlog='cd $CBSPIDER_ROOT/log'
 alias cdruntime='cd $CBSPIDER_ROOT/api-runtime'
 alias cdgrpc='cd $CBSPIDER_ROOT/api-runtime/grpc-runtime'
 alias cdrest='cd $CBSPIDER_ROOT/api-runtime/rest-runtime'
-alias cdtest='cd $CBSPIDER_ROOT/api-runtime/rest-runtime/test'
+alias cdtest='cd $CBSPIDER_ROOT/test'
+alias cdresttest='cd $CBSPIDER_ROOT/api-runtime/rest-runtime/test'
 alias cdmeerkat='cd $CBSPIDER_ROOT/api-runtime/meerkat-runtime'
 
 # cloud driver interface
