--- a/test/sg-rules-validation-cli/1.inbound-rule-test/setup.env
+++ b/test/sg-rules-validation-cli/1.inbound-rule-test/setup.env
@@ -25,7 +25,11 @@ new_test() {
 test_result() {
         EXP=$1
         RES=$2
-        echo -en " $EXP / $RES |" >> $RESULT_FNAME
+        if [ $EXP == $RES ];then
+                echo -en " $EXP / $RES |"
+        else
+                echo -en " $EXP / $RES (X) |"
+        fi
 }
 
 test_splitter() {        
