Enhance the report and print message format.

--- a/test/sg-rules-validation-cli/1.inbound-rule-test/setup.env
+++ b/test/sg-rules-validation-cli/1.inbound-rule-test/setup.env
@@ -26,9 +26,9 @@ test_result() {
         EXP=$1
         RES=$2
         if [ $EXP == $RES ];then
-                echo -en " $EXP / $RES |"
+                echo -en " $EXP / $RES |"  >> $RESULT_FNAME
         else
-                echo -en " $EXP / $RES (X) |"
+                echo -en " $EXP / $RES (X) |"  >> $RESULT_FNAME
         fi
 }
 
