[Cloudit] Image 조회 방식 변경
- SystemId로 통일
- 테스트 변수 변경

--- a/cloud-control-manager/cloud-driver/drivers/cloudit/main/conf/config.yaml.sample
+++ b/cloud-control-manager/cloud-driver/drivers/cloudit/main/conf/config.yaml.sample
@@ -13,7 +13,7 @@ cloudit:
       nameId: mcb-test-vm
       systemId:
     ImageIID:
-      nameId: Ubuntu 18.04
+      nameId: ee441331-0872-49c3-886c-1873a6e32e09
       systemId: ee441331-0872-49c3-886c-1873a6e32e09
     VmSpecName: micro-1
     KeyPairIID:
