--- a/test/sg-rules-validation-cli/common/cloudit/setup.env
+++ b/test/sg-rules-validation-cli/common/cloudit/setup.env
@@ -1,6 +1,5 @@
 CONN_CONFIG=cloudit-config01
-IMAGE_NAME="Ubuntu 18.04"
-IMAGE_NAME="Ubuntu 18.04"
+IMAGE_NAME=ee441331-0872-49c3-886c-1873a6e32e09
 SPEC_NAME=small-2
 
 VPC_CIDR=10.0.0.0/16
