--- a/test/sg-rules-validation-cli/common/gcp/setup.env
+++ b/test/sg-rules-validation-cli/common/gcp/setup.env
@@ -1,3 +1,4 @@
 CONN_CONFIG=gcp-iowa-config
-IMAGE_NAME=https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-1804-bionic-v20191024
+#IMAGE_NAME=https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-minimal-1804-bionic-v20191024
+IMAGE_NAME=https://www.googleapis.com/compute/v1/projects/gce-uefi-images/global/images/ubuntu-1804-bionic-v20200317
 SPEC_NAME=f1-micro
