[OpenStack] Image 조회 방식 변경
- OpenStack - Image 정보 관련
  - OpenStack은 User NameId(Ubuntu 18.04)의 identity가 보장되지 않기에 SystemId 기준으로 사용
   - Image조회 방식 변경 및 Image Get/List 반환 값 변경
- 테스트 변수 변경

--- a/cloud-control-manager/cloud-driver/drivers/openstack/main/conf/config.yaml.sample
+++ b/cloud-control-manager/cloud-driver/drivers/openstack/main/conf/config.yaml.sample
@@ -7,8 +7,8 @@ openstack:
   region: RegionOne
   resources:
     image:
-      nameId: ubuntu 18.04 LTS
-      systemId:
+      nameId: 37d7ad6c-e3e0-4a46-a288-963d182f05c7
+      systemId: 37d7ad6c-e3e0-4a46-a288-963d182f05c7
     security:
       nameId: mcb-test-security
       systemId:
