ISSUE 660 rootdisk type, size 로직 보완(tencent,alibaba) 보완완료
(1) Type: default, Size: default ==> Type: "", Size: ""
(2) Type: default, Size: 사용자 설정 size ==> Type: cloudos_meta: 첫번째 값으로 설정, Size: 사용자 설정 Size
(3) Type: 사용자 설정 Type, Size: default ==> Type: 사용자 설정 Type, Size: ""
(4) Type: 사용자 설정 Type, Size: 사용자 설정 Size ==> Type: 사용자 설정 Type, Size: 사용자 설정 Size

--- a/cloud-driver-libs/cloudos_meta.yaml
+++ b/cloud-driver-libs/cloudos_meta.yaml
@@ -34,10 +34,10 @@ GCP:
 ALIBABA:
   region: Region / Zone
   credential: ClientId / ClientSecret
-  #rootdisktype: cloud_efficiency / cloud / cloud_ssd / cloud_essd
-  rootdisktype: cloud_efficiency / cloud / cloud_ssd
-  #rootdisksize: cloud_efficiency|20|32768|GB / cloud|5|2000|GB / cloud_ssd|20|32768|GB / cloud_essd|20|32768|GB
-  rootdisksize: cloud_efficiency|20|32768|GB / cloud|5|2000|GB / cloud_ssd|20|32768|GB
+  rootdisktype: cloud_essd / cloud_efficiency / cloud / cloud_ssd
+  #rootdisktype: cloud_efficiency / cloud / cloud_ssd
+  rootdisksize: cloud_essd|20|32768|GB / cloud_efficiency|20|32768|GB / cloud|5|2000|GB / cloud_ssd|20|32768|GB
+  #rootdisksize: cloud_efficiency|20|32768|GB / cloud|5|2000|GB / cloud_ssd|20|32768|GB
   # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM
   idmaxlength: 128 / 128 / 128 / 128 / 128 
 
