[Cloudit] NLB 기능 개발
- 제공 불가 기능
  - ChangeListener : Port, Protocol 변경 불가

- Listener 
  - Protocol : TCP Only
    - Cloudit NLB Listener Protocol: HTTP, HTTPS, TCP 제공
    - CB-Spider NLB Listener Protocol: TCP, UDP 제공
  - Port, Protocol 변경 불가
    - Cloudit의 기능상 Listener의 Port, Protocol 를 변경할 수 없습니다.
  - Port 범위 제한 1~65534
    - 65535는 Cloudit에서 제공되는 통계페이지로서 고정(cloudit 내에서 지정가능 옵션이나, cb-spider에서 65535 고정)

- VMGroup 
  - Protocol : TCP Only
    - VMGroup과 Listener의 프로토콜이 같도록 설정되어, Listener Protocol이 TCP인 경우만 제공
  - Protocol 변경 불가, port 변경 가능
    - Cloudit의 기능상 VMGroup의 Protocol 를 변경할 수 없습니다.

- HealthCheck Protocol, Port 변경 불가
  - Protocol : TCP, HTTP 
    - Cloudit NLB HealthCheck Protocol: HTTP, TCP 제공
  - Port, Protocol 변경 불가
    - Cloudit의 기능상 HealthCheck의 Protocol을 변경할 수 없습니다.
    - HealthCheck의 port는 VMGroup에 지정된 멤버들의 포트로 연결되어, vmGroup의 포트 변경시, 변경됩니다.
    - Interval, Timeout, Threshold 만 변경가능.

--- a/cloud-control-manager/cloud-driver/drivers/cloudit/main/conf/config.yaml.sample
+++ b/cloud-control-manager/cloud-driver/drivers/cloudit/main/conf/config.yaml.sample
@@ -7,7 +7,6 @@ cloudit:
   tenant_id: #TBD
   ant_id: #TBD
   server_id: #TBD
-
   vm:
     IID:
       nameId: mcb-test-vm
@@ -76,3 +75,53 @@ cloudit:
       RemoveSubnet:
         SubnetIID:
           nameId: mcb-test-vpc-subnet0
+  nlb:
+    IID:
+      nameId: nlb-tester-tcp
+      systemId:
+    VpcIID:
+      nameId: nlb-tester-vpc
+      systemId:
+    Type: PUBLIC
+    Scope: REGION
+    Listener:
+      Protocol: tcp
+      # IP:
+      Port: 8080
+      # DNSName:
+    VMGroup:
+      Protocol: tcp
+      Port: 8080
+      VMs:
+        - nameId: nlb-tester-vm-03
+          systemId:
+        - nameId: nlb-tester-vm-04
+          systemId:
+    HealthChecker:
+      Protocol: tcp
+      Port: 8080
+      Interval: 10
+      Timeout: 5
+      Threshold: 2
+    UpdateListener:
+      Protocol: tcp
+      Port: 8080
+    UpdateVMGroup:
+      Protocol: tcp
+      Port: 8087
+    UpdateHealthChecker:
+      Protocol: tcp
+      Port: 8087
+      Interval: 10
+      Timeout: 5
+      Threshold: 2
+    AddVMs:
+      - nameId: nlb-tester-vm-03
+        systemId:
+      - nameId: nlb-tester-vm-04
+        systemId:
+    RemoveVMs:
+      - nameId: nlb-tester-vm-04
+        systemId:
+      - nameId: nlb-tester-vm-03
+        systemId:
