--- a/test/functional-test-cli/common/setup.env
+++ b/test/functional-test-cli/common/setup.env
@@ -7,7 +7,7 @@ SUBNET_NAME=${PREFIX}-subnet-01
 SUBNET_CIDR=192.168.0.0/24
 
 SG_NAME=${PREFIX}-SG01
-KEYPAIR_NAME=${PREFIX}-keypair-01
+KEYPAIR_NAME=${PREFIX}-$1-keypair-01
 
 VM_NAME=${PREFIX}-VM
 
