--- a/test/functional-test-cli/common/openstack-etri/setup.env
+++ b/test/functional-test-cli/common/openstack-etri/setup.env
@@ -2,3 +2,8 @@ CONN_CONFIG=openstack-config01
 IMAGE_NAME=ubuntu-1804
 IMAGE_NAME=52208390-9f6c-4907-af90-8be14151f972
 SPEC_NAME=ds2G
+
+
+VPC_CIDR=10.0.0.0/16
+SUBNET_CIDR=10.0.8.0/22
+SUBNET_CIDR_ADD=10.0.12.0/22
