--- a/test/functional-test-cli/common/setup.env
+++ b/test/functional-test-cli/common/setup.env
@@ -1,4 +1,6 @@
 PREFIX=SPIDER-FUNCTION-Test
+# for Max Length Name Test
+PREFIX=SPIDER-FUNCTION-Test-abcdefghijklmnopqrstuvwxyz-abcdefghijklmnopqrstuvwxyz-abcdefghijklmnopqrstuvwxyz-abcdefghijklmnopqrstuvwxyz-abcdefghijklmnopqrstuvwxyz-abcdefghijklmnopqrstuvwxyz-abcdefghijklmnopqrstuvwxyz-abcdefghijklmnopqrstuvwxyz-abcdefghijklmnopqrstuvwxyz-268
 
 
 VPC_NAME=${PREFIX}-vpc-01
@@ -7,7 +9,7 @@ SUBNET_NAME=${PREFIX}-subnet-01
 SUBNET_CIDR=192.168.0.0/24
 
 SG_NAME=${PREFIX}-SG01
-KEYPAIR_NAME=${PREFIX}-$1-keypair-01
+KEYPAIR_NAME=$1-keypair-01
 
 VM_NAME=${PREFIX}-VM
 
