--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,4 @@ cloud-control-manager/cloud-driver/drivers/cloudit/main/conf/config.yaml
 cloud-control-manager/cloud-driver/drivers/ibmcloud-vpc/main/conf/config.yaml
 cloud-control-manager/cloud-driver/drivers/openstack/main/conf/config.yaml
 
+cloud-control-manager/cloud-driver/drivers/alibaba/main/pmks_test/temp/*
