gitignore test kazaam

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,4 @@ cloud-control-manager/cloud-driver/drivers/ibmcloud-vpc/main/conf/config.yaml
 cloud-control-manager/cloud-driver/drivers/openstack/main/conf/config.yaml
 
 *pmks_test/temp/*
+*ex_kazaam/*
