Add Mock's Disk Type List to cloudos_meta.yaml

--- a/cloud-driver-libs/cloudos_meta.yaml
+++ b/cloud-driver-libs/cloudos_meta.yaml
@@ -111,6 +111,10 @@ DOCKER:
 MOCK:
   region: Region
   credential: MockName
+  # idmaxlength: VPC / Subnet / SecurityGroup / KeyPair / VM
+  idmaxlength: 255 / 255 / 255 / 255 / 255
+  rootdisktype: SSD /HDD / MEM
+  disktype: SSD / HDD / MEM
 
 CLOUDTWIN:
   region: Region
