--- a/cloud-driver-libs/cloudos_meta.yaml
+++ b/cloud-driver-libs/cloudos_meta.yaml
@@ -115,6 +115,7 @@ MOCK:
   idmaxlength: 255 / 255 / 255 / 255 / 255
   rootdisktype: SSD /HDD / MEM
   disktype: SSD / HDD / MEM
+  disksize: SSD|1|16384|GB / HDD|1|16384|GB / MEM|10|512|GB
 
 CLOUDTWIN:
   region: Region
